/**
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import React from 'react';
import renderer from 'react-test-renderer';
import PlayerWonderStage from '../PlayerWonderStage';

const EFFECTS = ['3 points'];

it('renders without crashing', () => {
  const tree =
    renderer.create(
      <PlayerWonderStage effects={EFFECTS} isCompleted={false} />
    ).toJSON();
  expect(tree).toMatchSnapshot();
});

it('renders when completed', () => {
  const tree =
    renderer.create(
      <PlayerWonderStage effects={EFFECTS} isCompleted={true} />
    ).toJSON();
  expect(tree).toMatchSnapshot();
});
