// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders when completed 1`] = `
<li
  className="PlayerWonderStage"
  style={Object {}}
>
  <ul>
    <li>
      3 points
    </li>
  </ul>
</li>
`;

exports[`renders without crashing 1`] = `
<li
  className="PlayerWonderStage"
  style={
    Object {
      "backgroundColor": "rgba(93, 64, 55, 0.5)",
    }
  }
>
  <ul>
    <li>
      3 points
    </li>
  </ul>
</li>
`;
